Issue 23: Refactor PSFeditor into model and IO plugins

--- a/bundles/org.eclipselabs.team.ui.psf.editor/src/org/eclipselabs/team/psf/editor/messages.properties
+++ b/bundles/org.eclipselabs.team.ui.psf.editor/src/org/eclipselabs/team/psf/editor/messages.properties
@@ -14,7 +14,7 @@ ProjectSetEditor_Save_MessageBox_message=Save projectset to another location.
 ProjectSetHandler_Invalid_Project_error_01=Project '
 ProjectSetHandler_Invalid_Project_error_02=' is not part of any repository. Cannot add this to ProjectSet
 ProjectSetImportWizard_5=<?xml version="1.0" encoding="UTF-8"?>\n<psf version="2.0">\n</psf>
-ProjectSetImportWizard_6=org.eclipselabs.team.ui.psf.editor
+ProjectSetImportWizard_6=org.eclipselabs.team.psf.editor
 ProjectSetImportWizard_Container_error_01=Container "
 ProjectSetImportWizard_Container_error_02=" does not exist.
 ProjectSetImportWizard_Create_info=Creating 
